--- a/AncientWisp/AncientWisp.csproj
+++ b/AncientWisp/AncientWisp.csproj
@@ -74,6 +74,9 @@
     <Reference Include="R2API">
       <HintPath>D:\SteamLibrary\steamapps\common\Risk of Rain 2\BepInEx\plugins\R2API\R2API.dll</HintPath>
     </Reference>
+    <Reference Include="Risky_Artifacts">
+      <HintPath>libs\Risky_Artifacts.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>libs\Unity.TextMeshPro.dll</HintPath>
     </Reference>
